Modify deploy.yml workflow to provide NOTION_TOKEN env var to the sync_blog_pages_from_notion.rb script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,11 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
     env:
       HUGO_VERSION: 0.124.1
+      NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
