Configure GitHub Actions to sync blog content from Notion every minute

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
 
   workflow_dispatch:
 
+  schedule:
+    - cron: '* * * * *'
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
