--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
         run: gem install bundler
       - name: Bundle Install
         run: bundle install
-      - name: Sync pages from Notion
-        run: bundle exec ruby scripts/sync_blog_pages_from_notion.rb
+      - name: Sync blog content from Notion
+        run: bundle exec ruby scripts/sync_blog_content_from_notion.rb
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
