Remove unnecessary '/' character in base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://nisanthchunduru.github.io/"
+baseurl = "https://nisanthchunduru.github.io"
 languageCode = "en-us"
 title = "Nisanth's Blog"
 
