Move the notion synchronizer to a separate repository https://github.com/nisanthchunduru/hugo-notion

--- a/invoker.ini
+++ b/invoker.ini
@@ -1,5 +1,5 @@
 [hugo]
 command = hugo server --watch --buildDrafts
 
-[notion-synchronizer]
-command = bundle exec ruby daemons/notion-synchronizer.rb
+; [notion-synchronizer]
+; command = huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
