--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,27 +43,15 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.2.3
-      - name: Install Bundler
-        run: gem install bundler
-      - name: Restore gems from cache
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: gems
-      - name: Bundle Install
-        run: bundle install
-      - name: Cache gems
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: gems
+      - name: Install hugo-nation Gem
+        run: gem install hugo-notion --prerelease
       # - name: Restore blog content from cache
       #   uses: actions/cache@v2
       #   with:
       #     path: content
       #     key: content
       - name: Sync blog content from Notion
-        run: bundle exec ruby scripts/sync_blog_content_from_notion.rb
+        run: huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
       - name: Cache blog content
         uses: actions/cache@v2
         with:
