--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Install node modules
+        run: npm install
+      - name: Generate Tailwind CSS
+        run: npm run tw:build
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
