Configure invoker to run the "tw:watch" npm script

--- a/invoker.ini
+++ b/invoker.ini
@@ -1,5 +1,8 @@
 [hugo]
 command = hugo server --watch --buildDrafts
 
+[tw-watch]
+command = npm run tw:watch
+
 ; [notion-synchronizer]
 ; command = huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
