Modify tailwind watch command so it doesn't crash when invoker starts it

--- a/invoker.ini
+++ b/invoker.ini
@@ -2,7 +2,7 @@
 command = hugo server --watch --buildDrafts
 
 [tw-watch]
-command = npm run tw:watch
+command = npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css --watch=always
 
 ; [notion-synchronizer]
 ; command = huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
