--- a/invoker.ini
+++ b/invoker.ini
@@ -1,8 +1,9 @@
 [hugo]
 command = hugo server --watch --buildDrafts
 
-[tw-watch]
+[tailwind]
 command = npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css --watch=always
 
-; [notion-synchronizer]
-; command = huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
+[hugo-notion]
+command = huno -r
+
