Move to the Go lang implementation of hugo-notion

--- a/invoker.ini
+++ b/invoker.ini
@@ -5,5 +5,5 @@ command = hugo server --watch --buildDrafts
 command = npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css --watch=always
 
 [hugo-notion]
-command = huno -r 5
+command = hugo-notion -r 5
 
