--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,14 +43,14 @@ jobs:
         run: npm install
       - name: Generate Tailwind CSS
         run: npm run tw:build
-      - name: Install Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Install Go
+        uses: actions/setup-go@v3
         with:
-          ruby-version: 3.2.3
-      - name: Install hugo-nation Gem
-        run: gem install hugo-notion --prerelease
+          go-version: '1.22.2'
+      - name: Install hugo-nation
+        run: go install github.com/nisanthchunduru/hugo-notion@latest
       - name: Sync blog content from Notion
-        run: huno https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
+        run: hugo-notion https://www.notion.so/blog_content-0f1b55769779411a95df1ee9b4b070c9
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
