--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "static/fonts"]
 	path = static/fonts
-	url = git@github.com:nisanthchunduru/fonts.git
+	url = https://github.com/nisanthchunduru/fonts.git
