--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,10 @@ services:
       - ./content:/opt/blog/content
     ports:
       - "1313:1313"
+  hugo-notion:
+    build:
+      context: .
+      dockerfile: Dockerfile.hugo-notion
+    volumes:
+      - ./content:/opt/blog/content
+    env_file: .env
