--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,18 +1,23 @@
 # Name of your application. Used to uniquely configure containers.
-service: my-app
+service: blog
 
 # Name of the container image.
-image: user/my-app
+image: nisanth074/blog
 
 # Deploy to these servers.
 servers:
-  - 192.168.0.1
+  web:
+    hosts:
+      - 150.136.2.200
+    options:
+      volume: "/opt/blog-content:/opt/blog/content:ro"
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: my-user
+
+  username: nisanth074
 
   # Always use an access token rather than real password when possible.
   password:
@@ -62,6 +67,16 @@ registry:
 #     port: 6379
 #     directories:
 #       - data:/data
+accessories:
+  hugo-notion:
+    host: 150.136.2.200
+    image: nisanth074/hugo-notion
+    directories:
+      - /opt/blog-content:/opt/blog/content
+    env:
+      secret:
+        - NOTION_TOKEN
+        - CONTENT_NOTION_URL
 
 # Configure custom arguments for Traefik. Be sure to reboot traefik when you modify it.
 # traefik:
@@ -73,6 +88,10 @@ registry:
 # healthcheck:
 #   path: /healthz
 #   port: 4000
+
+healthcheck:
+  path: /
+  port: 1313
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
