Add npm aliases for frequent commands

--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "scripts": {
     "tw:build": "npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css",
-    "tw:watch": "npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css -w"
+    "tw:watch": "npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/tailwind.compiled.css -w",
+    "docker:push": "docker build -t nisanth074/blog:latest . --push",
+    "docker:push:x86": "docker buildx build --platform linux/amd64 -t nisanth074/blog:latest . --push",
+    "kamal:init": "kamal init",
+    "kamal:setup": "kamal setup",
+    "kamal:deploy": "kamal deploy",
+    "deploy": "kamal deploy",
+    "kamal:env-push": "kamal env push",
+    "hugo-notion:docker:push:x86": "docker buildx build --platform linux/amd64 -t nisanth074/hugo-notion:latest -f Dockerfile.hugo-notion . --push",
+    "hugo-notion:deploy": "kamal accessory boot hugo-notion"
   },
   "keywords": [],
   "author": "",
