Move to a newer version of hugo-notion that resolves a bug that was causing synced child pages of a page to be deleted

--- a/Dockerfile.hugo-notion
+++ b/Dockerfile.hugo-notion
@@ -1,6 +1,8 @@
 FROM golang:1.22-alpine AS blog
 
-RUN go install github.com/nisanthchunduru/hugo-notion@latest
+ARG HUGO_NOTION_VERSION=latest
+
+RUN go install github.com/nisanthchunduru/hugo-notion@${HUGO_NOTION_VERSION}
 
 WORKDIR /opt/blog
 
