--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.hugo-notion
+      args:
+        - HUGO_NOTION_VERSION=cd2a7165ab6f3b7e3793da0c0b06251aafa27a10
     volumes:
       - ./content:/opt/blog/content
     env_file: .env
