--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     command: npm run tw:watch
     tty: true
   hugo-notion:
-    image: nisanth074/hugo-notion:latest
+    image: nisanth074/hugo-notion:9457a255f77fb4bfa85607f5ee6cbfa40eb80795
     volumes:
       - ./content:/opt/blog/content
     env_file: .env
+    working_dir: /opt/blog
