--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "docker:push": "docker build -t nisanth074/blog:latest . --push",
     "docker:push:x86": "docker buildx build --platform linux/amd64 -t nisanth074/blog:latest . --push",
     "hugo-notion:docker:push:x86": "docker buildx build --platform linux/amd64 -t nisanth074/hugo-notion:latest -f Dockerfile.hugo-notion . --push",
-    "hugo-notion:deploy": "kamal accessory boot hugo-notion"
+    "hugo-notion:deploy": "kamal accessory boot hugo-notion",
+    "start": "docker compose up --build --pull always"
   },
   "keywords": [],
   "author": "",
