--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,3 +6,9 @@ services:
     ports:
       - "80:4567"
     restart: unless-stopped
+  hugo-notion:
+    image: nisanth074/hugo-notion
+    volumes:
+      - /opt/blog-content:/opt/blog/content
+    env_file: /opt/blog/.env
+    working_dir: /opt/blog
